--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,11 @@
 /* Styles */
 
+.main{
+    width:100%;
+    max-width: 1200px;
+    height:1500px;
+    position:relative;
+    margin:0 auto;
+    background-color:lightgray;
+}
+
