--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,31 @@
     background-color:lightgray;
 }
 
+header{width:100%;
+height:120px;
+background-color:#F8F8F8;
+position: absolute;
+top:0px;
+left:0px;
+}
+
+.logo{width:20%;
+height:120px;
+position:absolute;
+top:0px;
+left:0px;}
+
+.logo>img{
+    width:60%;
+}
+
+
+.caption{width:70%;
+    height:80px;
+    position:absolute;
+    top:20px;
+    left:250px;
+    text-align:center;
+    color:darkred;
+    font-size:55px;
+    font-family:Garamond;}
