--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,18 @@
 }
 
 header{width:100%;
-height:120px;
-background-color:#F8F8F8;
-position: absolute;
-top:0px;
-left:0px;
+    height:120px;
+    background-color:#F8F8F8;
+    position: absolute;
+    top:0px;
+    left:0px;
 }
 
 .logo{width:20%;
-height:120px;
-position:absolute;
-top:0px;
-left:0px;}
+    height:120px;
+    position:absolute;
+    top:0px;
+    left:0px;}
 
 .logo>img{
     width:60%;
@@ -37,3 +37,22 @@ left:0px;}
     color:darkred;
     font-size:55px;
     font-family:Garamond;}
+
+nav{width:100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position:absolute;
+    top:120px;
+    left:0px;
+    background-color:darkred;}
+
+li{display:inline-block;
+    list-style-type: none;
+    width:20%;
+    text-align: center;
+    margin-left:3%;}
+
+a{color:#F8F8F8;
+    font-size:22px;
+    font-family: Garamond;
+    text-decoration:none;}
