--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,45 @@ a{color:#F8F8F8;
     left:0px;}
 
 .main_image>img{width:100%;}
+
+.main_text{width:40%;
+    height:400px;
+    border:5px solid orangered;
+    border-radius: 10px;
+    position:absolute;
+    top:300px;
+    left:650px;
+    z-index:7;}
+
+
+.text1{width:100%;
+    height:100px;
+    text-align: center;
+    font-size:40px;
+    text-transform: uppercase;
+    position:absolute;
+    top:30px;
+    left:0px;
+}
+
+
+.text2{width:90%;
+    height:100px;
+    text-align: center;
+    font-size:35px;
+    position:absolute;
+    top:200px;
+    left:5%;
+    font-weight: bold;
+    }
+
+.block{width:40%;
+    height:400px;
+    background-color: white;
+    opacity: 0.5;
+    border-radius: 10px;
+    position:absolute;
+    top:300px;
+    left:650px;
+    z-index:5;}
+            
