--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,8 @@ a{color:#F8F8F8;
     opacity: 0.5;
     border-radius: 10px;
     position:absolute;
-    top:300px;
-    left:650px;
-    z-index:5;}
+    top:305px;
+    left:655px;
+    z-index:5;
+}
             
