--- a/css/style.css
+++ b/css/style.css
@@ -107,4 +107,14 @@ a{color:#F8F8F8;
     left:55.5%;
     z-index:5;
 }
-            
+
+.greeting{width:94%;
+    height:200px;
+    position:absolute;
+    top:880px;
+    left:3%;
+    text-align:center;
+    font-size:32px;
+    color:darkred;
+    line-height: 1.5;
+    font-family:Garamond;}
