--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,21 @@ a{color:#F8F8F8;
     color:darkred;
     line-height: 1.5;
     font-family:Garamond;}
+
+
+footer{width:100%;
+    height:50px;
+    padding-top:20px;
+    padding-bottom: 30px;
+    background-color:darkred;
+    position: absolute;
+    top:1100px;
+    left:0px;
+    color:white;
+    font-size:20px;
+    }
+
+footer>p{
+    margin-left:5%;
+    font-family:Garamond;
+}
