--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ nav{width:100%;
     left:0px;
     background-color:darkred;}
 
+ul{width:75%;
+float:left;}
+
 li{display:inline-block;
     list-style-type: none;
     width:20%;
@@ -56,6 +59,44 @@ a{color:#F8F8F8;
     font-size:22px;
     font-family: Garamond;
     text-decoration:none;}
+
+
+.block_buttons{width:20%;
+float:left;
+margin-top:8px;}
+
+
+#btn_sign{
+    background-color:gray;
+    padding:5px;
+    font-size:16px;
+    border:none;
+    border-radius:5px;
+    margin-right:10px;
+    }
+    
+ #btn_sign a{
+    text-decoration:none;
+    }
+    
+    
+#btn_login{
+    background-color:gray;
+    color:darkred;
+    padding:5px;
+    font-size:16px;
+    border:none;
+    border-radius:5px;
+}
+    
+ #btn_login a{
+ text-decoration:none;
+}
+    
+
+
+
+
 
 
 .main_image{width:100%;
