--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,41 @@ footer>p{
     margin:0 auto;
     background-color:lightgray;
 }
+
+.header_elements{
+    width:100%;
+    height:100px;
+    font-family:Garamond;
+}
+
+
+.login_caption{
+    width:60%;
+    height:50px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    font-size:35px;
+    font-weight:bold;
+    color:darkred;
+   
+    text-align:center;
+    float:left;
+
+}
+
+
+.login_text{
+    width:40%;
+    height:50px;
+    padding-top: 35px;
+    padding-bottom: 20px;
+    font-size:24px;
+    float:left;
+    color:black;
+    font-weight: bold;
+}
+
+.login_text a{
+    text-decoration: underline;
+    color:black;
+}
