--- a/css/style.css
+++ b/css/style.css
@@ -246,3 +246,94 @@ footer>p{
     font-size:28px;
     font-family: Garamond;
 }
+
+
+#form_login{
+    width:50%;
+    height:300px;
+    background-color:gray;
+    border-radius:20px;
+    position:absolute;
+    top:150px;
+    left:25%;
+}
+
+label{
+    font-size:22px;
+    font-weight:bold;
+    color:white;
+    margin-left:5%;
+}
+
+input[type="text"]{
+	width:80%;
+	height: 30px;
+	margin-left:5%;
+	border:none;
+	border-radius:8px;
+}
+
+input::placeholder{
+    color:black;
+    padding-left: 10px;
+}
+
+
+input[type="password"]{
+	width:80%;
+	height: 30px;
+	margin-left:5%;
+	border:none;
+	border-radius:8px;
+}
+
+input:focus{
+    outline: none;
+}
+
+
+
+.buttons{
+    width:100%;
+    height:50px;
+    margin-top:30px;
+    position:absolute;
+    top:190px;
+    left:0px;
+}
+#btn_clear{
+	width:20%;
+	padding:1%;
+	background-color:darkred;
+	font-weight: bold;
+    color:white;
+	border:none;
+	font-size:18px;
+	border-radius: 8px;
+    position:absolute;
+    top:0px;
+    left:55%;
+}
+
+#btn_clear:hover{
+	cursor: pointer;
+}
+
+
+#btn_log_in{
+	width:20%;
+	padding:1%;
+    background-color:darkred;
+    color:white;
+	font-weight: bold;
+	border:none;
+	font-size:18px;
+	border-radius: 8px;
+    position:absolute;
+    top:0px;
+    left:15%;
+}
+
+#btn_log_in:hover{
+	cursor: pointer;
+}
