--- a/css/style.css
+++ b/css/style.css
@@ -455,3 +455,10 @@ left:2%;}
 .logo2>img{
     width:82%;
 }
+
+.block_tips{width:100%;
+height:800px;
+position:absolute;
+top:200px;
+left:0px;
+background-color: blue;}
