--- a/css/style.css
+++ b/css/style.css
@@ -460,5 +460,16 @@ left:2%;}
 height:800px;
 position:absolute;
 top:200px;
-left:0px;
-background-color: blue;}
+left:0px;}
+
+
+.image_tips{width:100%;
+    height:800px;
+    position:absolute;
+    top:10px;
+    left:0px;
+   
+}
+    
+.image_tips>img{width:100%;
+    opacity:0.5;}
