--- a/css/style.css
+++ b/css/style.css
@@ -509,3 +509,33 @@ font-family:Garamond;}
     background-color:#F8F8F8;
     font-family:Garamond;
 }
+
+.admin_greeting{
+    width:60%;
+    height:50px;
+    font-size:35px;
+    font-weight:bold;
+    color:darkred;
+    text-align:center;
+    position:absolute;
+    top:40px;
+    left:2%;
+
+}
+
+
+#btn_log_out{
+    background-color:darkred;
+    color:white;
+    padding:10px;
+    font-size:16px;
+    border:none;
+    border-radius:5px;
+    position:absolute;
+    top:40px;
+    left:75%;
+}
+
+#btn_log_out:hover{
+	cursor: pointer;
+}
