--- a/css/style.css
+++ b/css/style.css
@@ -627,3 +627,52 @@ textarea::placeholder{
     top:650px;
     left:10%;
 }
+
+
+.new_post{width:100%;
+height:200px;
+margin-top:20px;
+margin-bottom:20px;
+background-color: #A0A0A0;
+border-radius:5px;}
+
+
+.new_post_title{width:15%;
+height:160px;
+padding:10px;
+margin:10px;
+text-decoration: underline darkred;
+background-color: white;
+float:left;}
+
+.new_post_content{
+    width:55%;
+    height:160px;
+    padding:10px;
+    margin:10px;
+    background-color: white;
+    float:left;
+}
+
+.update_btn{padding:5px;
+margin:20px;
+background-color: darkblue;
+border:none;
+color:white;
+font-size:16px;
+border-radius: 2px;}
+
+.update_btn:hover{cursor: pointer;}
+
+
+
+
+.delete_btn{padding:5px;
+    margin:20px;
+    background-color:darkred;
+    border:none;
+    color:white;
+    font-size:16px;
+    border-radius: 2px;}
+    
+.delete_btn:hover{cursor: pointer;}
