--- a/css/style.css
+++ b/css/style.css
@@ -676,3 +676,18 @@ border-radius: 2px;}
     border-radius: 2px;}
     
 .delete_btn:hover{cursor: pointer;}
+
+
+
+
+/* Travel blog */
+
+.blog_main{
+    width:100%;
+    max-width: 1200px;
+    height:2000px;
+    position:relative;
+    margin:0 auto;
+    background-color:#F8F8F8;
+    font-family:Garamond;
+}
