--- a/css/style.css
+++ b/css/style.css
@@ -691,3 +691,13 @@ border-radius: 2px;}
     background-color:#F8F8F8;
     font-family:Garamond;
 }
+
+
+.blog_container{
+    width:100%;
+    height:1500px;
+    background-color:yellow;
+    position:absolute;
+    top:200px;
+    left:0px;
+}
