Add styles for block blog_posts

--- a/css/style.css
+++ b/css/style.css
@@ -701,3 +701,13 @@ border-radius: 2px;}
     top:200px;
     left:0px;
 }
+
+
+.blog_posts{
+    width:80%;
+    height:1200px;
+    background-color:green;
+    position:absolute;
+    top:50px;
+    left:10%;
+}
