--- a/css/style.css
+++ b/css/style.css
@@ -630,32 +630,31 @@ textarea::placeholder{
 
 
 .new_post{width:100%;
-height:200px;
+height:240px;
 margin-top:20px;
 margin-bottom:20px;
 background-color: #A0A0A0;
 border-radius:5px;}
 
 
-.new_post_title{width:15%;
-height:160px;
-padding:10px;
-margin:10px;
-text-decoration: underline darkred;
+.new_post_title{width:100%;
+height:30px;
+padding-top:10px;
+padding-bottom: 10px;
+font-size:22px;
 background-color: white;
-float:left;}
+text-align: center;}
 
 .new_post_content{
-    width:55%;
-    height:160px;
-    padding:10px;
-    margin:10px;
+    width:100%;
+    height:140px;
     background-color: white;
-    float:left;
+    font-size:18px;
+    margin-top:5px;
 }
 
 .update_btn{padding:5px;
-margin:20px;
+margin:10px;
 background-color: darkblue;
 border:none;
 color:white;
@@ -668,7 +667,7 @@ border-radius: 2px;}
 
 
 .delete_btn{padding:5px;
-    margin:20px;
+    margin:10px;
     background-color:darkred;
     border:none;
     color:white;
