--- a/css/style.css
+++ b/css/style.css
@@ -648,11 +648,11 @@ font-weight: bold;
 text-align: center;}
 
 .new_post_content{
-    width:100%;
-    height:140px;
+    width:98%;
+    height:120px;
     background-color: white;
-    font-size:18px;
-    margin-top:5px;
+    font-size:20px;
+    padding:1%;
 }
 
 .update_btn{padding:5px;
